# lareventdisplay

./: CMakeLists.txt  altCMakeLists.cmake
EveDisplay/: AlgHolder.h  AlgHolder_h.bak  CMakeLists.txt  EveDisplay.h  EveDisplay_service.cc  EveNavGui.cxx  EvePSetGui_cxx.bak  GenericSceneMaker.h  GenericViewerMaker.h  LinkDef_h.bak  SimpleGeoMaker.cxx  SimpleGeoMaker.h  StaticEveAlgs_module_cc.wip  TPC3DViewer_module.cc  ThreeDViewerMaker_module.cc  TrackMaker_module.cc  TrackMaker_module_cc.bak  TrackSceneMaker_module_cc.bak  VisElemMaker.h  VisElemMaker_h.bak  classes.h  classes_def.xml  classes_def_xml.bak  classes_h.bak
EventDisplay/: CMakeLists.txt  InfoTransfer_service.cc  RecoBaseDrawer.cxx  RecoBaseDrawer.h  TWQProjectionView.cxx  TWQProjectionView.h  TWireProjPad.cxx  altCMakeLists.cmake  evdservices.fcl  evdservices_base.fcl
Modules/: lareventdisplayConfig.cmake.in
cmakeConfig/: lareventdisplay-fragment.cmake.in
lareventdisplay/: CMakeLists.txt
lareventdisplay/EveDisplay/: CMakeLists.txt  CMakeLists_txt.bak  EveDisplay.h  EveDisplay_service.cc  EveNavGui.cxx  GenericViewerMaker.h  SimpleGeoMaker.cxx  SimpleGeoMaker.h  TLArElement_h.bak  TLArTrack_cxx.bak  TLArTrack_h.bak  TPC3DViewer_module.cc  VisTrackMaker_module.cc  classes_def.xml  evedservices.fcl  evedservices_fcl.bak
lareventdisplay/EveDisplay/Algs/: ADDigitMaker_h.bak  (+44 more)
lareventdisplay/EventDisplay/: AnalysisBaseDrawer.cxx  CMakeLists.txt  Display3DPad.cxx  RecoBaseDrawer.cxx  RecoBaseDrawer.h  SimulationDrawer.cxx  SimulationDrawer.h
lareventdisplay/Landed/: CMakeLists.txt
ups/: product_deps
(+78 files in other folders)
